--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   # if you are using latest flutter please update your flutter_svg package to ^0.18.*
-  flutter_svg: ^0.20.0-nullsafety.3 # help us to use SVG in our app
+  flutter_svg: ^0.18.0 # help us to use SVG in our app
   fluttertoast: ^7.1.6
 
   provider: ^4.3.1 # for State management
