--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   #flutter_svg: ^0.20.0-nullsafety.3
   fluttertoast: ^7.1.6
   mask_text_input_formatter: ^1.2.1
+  firebase_auth:
+  google_sign_in:
 
   provider: ^4.3.1 # for State management
   intl: ^0.16.1
