--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,21 +23,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_datetime_formfield: ^0.1.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.2
   # if you are using latest flutter please update your flutter_svg package to ^0.18.*
-  flutter_svg: ^0.18.0 # help us to use SVG in our app
+  flutter_svg: ^0.19.3 # help us to use SVG in our app
   #flutter_svg: ^0.20.0-nullsafety.3
   fluttertoast: ^7.1.6
   mask_text_input_formatter: ^1.2.1
-  firebase_auth:
-  google_sign_in:
+  firebase_core: ^0.7.0
+  firebase_auth: ^0.20.0
+  google_sign_in: ^4.5.9
+  cloud_firestore: ^0.16.0+1
 
-  provider: ^4.3.1 # for State management
-  intl: ^0.16.1
-  flutter_datetime_formfield: ^0.1.2
+  provider: ^5.0.0 # for State management
+  intl: ^0.16.0
+
 
 
 dev_dependencies:
