--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   # if you are using latest flutter please update your flutter_svg package to ^0.18.*
-  flutter_svg: ^0.19.3 # help us to use SVG in our app
-  #flutter_svg: ^0.20.0-nullsafety.3
+  #flutter_svg: ^0.19.3 # help us to use SVG in our app
+  flutter_svg: ^0.20.0-nullsafety.3
+  #flutter_svg: ^0.19.2
   fluttertoast: ^7.1.6
   mask_text_input_formatter: ^1.2.1
   firebase_core: ^0.7.0
