--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  sqflite:
+  path:
+  path_provider:
   flutter_datetime_formfield: ^0.1.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -37,6 +40,8 @@ dependencies:
   firebase_auth: ^0.20.0
   google_sign_in: ^4.5.9
   cloud_firestore: ^0.16.0+1
+  flutter_slidable: ^0.5.7
+  share: ^2.0.1
 
   provider: ^5.0.0 # for State management
   intl: ^0.16.0
