--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 3.0.0+1
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -46,8 +46,6 @@ dependencies:
   provider: ^5.0.0 # for State management
   intl: ^0.16.0
 
-
-
 dev_dependencies:
   change_app_package_name: ^0.1.2
   flutter_test:
@@ -64,6 +62,7 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/fonts/
     - assets/images/
     - assets/icons/
   #   - images/a_dot_ham.jpeg
