--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cloud_firestore: ^0.16.0+1
   flutter_slidable: ^0.5.7
   share: ^2.0.1
+  shared_preferences: ^2.0.5
 
   provider: ^5.0.0 # for State management
   intl: ^0.16.0
