--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   share: ^2.0.1
   shared_preferences: ^2.0.5
   flutter_email_sender: ^5.0.0
+  flutter_local_notifications: ^4.0.0
+
 
   provider: ^5.0.0 # for State management
   intl: ^0.16.0
