--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,10 +42,11 @@ dependencies:
   cloud_firestore: ^0.16.0+1
   flutter_slidable: ^0.5.7
   share: ^2.0.1
-  shared_preferences: ^2.0.5
+  
+  shared_preferences_settings: ^1.2.0
+  shared_preferences: ^0.5.12+4
   flutter_email_sender: ^5.0.0
   flutter_local_notifications: ^4.0.0
-
 
   provider: ^5.0.0 # for State management
   intl: ^0.16.0
